# AffinitySvgPatcher

./: .gitignore  README.md  pyproject.toml
