[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AffinitySvgPatcher"
version="1.0.0"
authors = [
    {name = "Lorenzo Peri"},
]
description = "A module for patching matplotlib-generated SVG files to make them work Affinity Designer."
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
]

